--- a/SqurrielDefender.html
+++ b/SqurrielDefender.html
@@ -14,11 +14,11 @@
 
 <script type="text/javascript">
 
-    var game = new Phaser.Game(800, 600, Phaser.CANVAS, '', { preload: preload, create: create, update: update });
+    var game = new Phaser.Game(1024, 950, Phaser.CANVAS, '', { preload: preload, create: create, update: update });
 
     function preload() {
 
-        game.load.image('sky', 'assets/bakbak.png');
+        game.load.image('sky', 'assets/bakbak2.png');
         game.load.image('ground', 'assets/platform.png');
         game.load.image('star', 'assets/star.png');
         game.load.spritesheet('dude', 'assets/dude.png', 32, 48);
@@ -63,7 +63,7 @@
         var ground = platforms.create(0, game.world.height - 64, 'ground');
 
         //  Scale it to fit the width of the game (the original sprite is 400x32 in size)
-        ground.scale.setTo(2, 2);
+        ground.scale.setTo(8, 2);
 
         //  This stops it from falling away when you jump on it
         ground.body.immovable = true;
