--- a/SqurrielDefender.html
+++ b/SqurrielDefender.html
@@ -113,6 +113,8 @@
 
         //  The score
         scoreText = game.add.text(16, 16, 'score: 0', { fontSize: '32px', fill: '#000' });
+        scoreText.fixedToCamera = true;
+        scoreText.cameraOffset.setTo(16, 16);
 
         //  Our controls.
         cursors = game.input.keyboard.createCursorKeys();
