--- a/SqurrielDefender.html
+++ b/SqurrielDefender.html
@@ -18,7 +18,7 @@
 
     function preload() {
 
-        game.load.image('sky', 'assets/bakbak2.png');
+        game.load.image('sky', 'assets/bakbak3.png');
         game.load.image('ground', 'assets/platform.png');
         game.load.image('star', 'assets/star.png');
         game.load.spritesheet('dude', 'assets/dude.png', 32, 48);
@@ -36,7 +36,9 @@
 
     function create() {
 
-        game.world.setBounds(0, 0, 800*4, 600);
+        //game.world.setBounds(0, 0, 800*4, 600);
+
+        game.world.setBounds(0, 0, 3500, this.game.height);
 
         outside = game.add.tileSprite(0, 0, this.game.world.width,
             this.game.world.height, 'sky');
