--- a/SqurrielDefender.html
+++ b/SqurrielDefender.html
@@ -21,7 +21,7 @@
         game.load.image('sky', 'assets/bakbak3.png');
         game.load.image('ground', 'assets/platform.png');
         game.load.image('star', 'assets/star.png');
-        game.load.spritesheet('dude', 'assets/dude.png', 32, 48);
+        game.load.spritesheet('squirrel', 'assets/Squirrel2.png', 33, 32);
 
     }
 
@@ -78,7 +78,7 @@
         ledge.body.immovable = true;
 
         // The player and its settings
-        player = game.add.sprite(32, game.world.height - 150, 'dude');
+        player = game.add.sprite(300, game.world.height - 150, 'squirrel');
 
         //  We need to enable physics on the player
         game.physics.arcade.enable(player);
@@ -91,6 +91,8 @@
         //  Our two animations, walking left and right.
         player.animations.add('left', [0, 1, 3], 10, true);
         player.animations.add('right', [4, 6, 2], 10, true);
+
+        player.scale.setMagnitude(3);
 
 
         //  Finally some stars to collect
@@ -159,7 +161,7 @@
             //  Stand still
             player.animations.stop();
 
-            player.frame = 4;
+            player.frame = 5;
         }
 
         //  Allow the player to jump if they are touching the ground.
