start of wheeled baddies

--- a/SqurrielDefender.html
+++ b/SqurrielDefender.html
@@ -94,6 +94,10 @@
 
         player.scale.setMagnitude(3);
 
+        // Type I baddies: cyclists and longboarders
+        wheeledBaddies = game.add.group();
+        wheeledBadies.enableBody = true;
+
 
         //  Finally some stars to collect
         stars = game.add.group();
