--- a/SqurrielDefender.html
+++ b/SqurrielDefender.html
@@ -14,10 +14,10 @@
 
 <script type="text/javascript">
 
-    var game = new Phaser.Game(800, 600, Phaser.CANVAS, '', { preload: preload, create: create, update: update });
+    var game = new Phaser.Game(1300,700, Phaser.CANVAS, '', { preload: preload, create: create, update: update });
 
     function preload() {
-        game.load.image('sky', 'assets/bakbak3.png');
+        game.load.image('sky', 'assets/bakbak.png');
         game.load.image('ground', 'assets/platform.png');
         game.load.image('star', 'assets/star.png');
         game.load.spritesheet('squirrel', 'assets/Squirrel2.png', 33, 32);
