--- a/SqurrielDefender.html
+++ b/SqurrielDefender.html
@@ -34,8 +34,7 @@
 
     function create() {
 
-        //game.world.setBounds(0, 0, 800*4, 600);
-
+        //background
         game.world.setBounds(0, 0, 3500, this.game.height);
 
         outside = game.add.tileSprite(0, 0, this.game.world.width,
@@ -43,15 +42,11 @@
 
         outside.autoScroll(this.levelSpeed, 0);
 
-
         frames = Phaser.Animation.generateFrameNames('frame', 2, 30, '', 2);
         frames.unshift('frame02');
 
         //  We're going to be using physics, so enable the Arcade Physics system
         game.physics.startSystem(Phaser.Physics.ARCADE);
-
-        //  A simple background for our game
-        //game.add.sprite(0, 0, 'sky');
 
         //  The platforms group contains the ground and the 2 ledges we can jump on
         platforms = game.add.group();
@@ -63,7 +58,7 @@
         var ground = platforms.create(0, game.world.height - 64, 'ground');
 
         //  Scale it to fit the width of the game (the original sprite is 400x32 in size)
-        ground.scale.setTo(8, 2);
+        ground.scale.setTo(10, 2);
 
         //  This stops it from falling away when you jump on it
         ground.body.immovable = true;
@@ -128,8 +123,6 @@
 
     function update() {
 
-        //outside.tilePosition.x += 2;
-
         //  Collide the player and the stars with the platforms
         game.physics.arcade.collide(player, platforms);
         game.physics.arcade.collide(stars, platforms);
@@ -150,7 +143,8 @@
         else if (cursors.right.isDown)
         {
             //  Move to the right
-            player.body.velocity.x = 150;
+            //player.body.velocity.x = 150;
+            player.body.velocity.x = 550;
 
             player.animations.play('right');
         }
