--- a/SquirrelDefender.html
+++ b/SquirrelDefender.html
@@ -17,10 +17,10 @@
     var game = new Phaser.Game(1300,700, Phaser.CANVAS, '', { preload: preload, create: create, update: update });
 
     function preload() {
-        game.load.image('sky', 'assets/bakbak.png');
+        game.load.image('background', 'assets/background.png');
         game.load.image('ground', 'assets/platform.png');
         game.load.image('star', 'assets/star.png');
-        game.load.spritesheet('squirrel', 'assets/Squirrel2.png', 33, 32);
+        game.load.spritesheet('squirrel', 'assets/Squirrel.png', 33, 32);
     }
 
     var player;
@@ -38,7 +38,7 @@
         game.world.setBounds(0, 0, 3500, this.game.height);
 
         outside = game.add.tileSprite(0, 0, this.game.world.width,
-            this.game.world.height, 'sky');
+            this.game.world.height, 'background');
 
         outside.autoScroll(this.levelSpeed, 0);
 
