added collision handler

--- a/SquirrelDefender.html
+++ b/SquirrelDefender.html
@@ -196,6 +196,8 @@
             releaseWheels();
         }
 
+        game.physics.arcade.overlap(bullets, cyclist, collisionHandler, null, this);
+
     }
 
     function releaseWheels() {
@@ -230,7 +232,7 @@
             bullet = bullets.getFirstExists(false);
             if (bullet) {
                 bullet.reset(player.x + 40, player.y + 57);
-                //bullet.body.velocity.x = 400;
+
                 if (cursors.left.isDown) {
                     bullet.body.velocity.x = -400;
                     bulletTime = game.time.now + 200;
@@ -241,6 +243,11 @@
                 }
             }
         }
+    }
+
+    function collisionHandler(bullet,cyclist){
+        bullet.kill();
+        cyclist.kill();
     }
 
 </script>
