--- a/SquirrelDefender.html
+++ b/SquirrelDefender.html
@@ -38,8 +38,8 @@
     var bulletTime = 0;
     var fireButton;
 
-    var total;
-    var timer;
+    var total = 0;
+    var baddieTime = 0;
 
     function create() {
 
@@ -193,26 +193,26 @@
             fireBullet();
         }
 
-        if (total < 20 && (game.time.now % 5 == 0)) {
+        if (total < 200 && (game.time.now > baddieTime)) {
             releaseWheels();
         }
 
     }
 
     function releaseWheels() {
-        cyclist = game.add.sprite(-(Math.random() * 800), game.world.height - 190, 'bicycle');
+        cyclist = game.add.sprite(3500, game.world.height - 190, 'bicycle');
         game.physics.arcade.enable(cyclist);
         cyclist.body.collideWorldBounds = true;
 
         cyclist.animations.add('left', [0, 1], 10, true);
-        cyclist.animations.add('right', [2, 3], 10, true);
+        cyclist.animations.play('left', 10, true);
 
         cyclist.scale.setMagnitude(5);
 
-        game.add.tween(cyclist).to({ x: game.width + (1600 + cyclist.x)}, 20000, Phaser.Easing.Linear.None, true);
+        game.add.tween(cyclist).to({ x: -50}, 20000, Phaser.Easing.Linear.None, true);
 
         total++;
-        timer = game.time.now + 100;
+        baddieTime = game.time.now + Math.random()*4000;
     }
 
     function collectStar (player, star) {
