--- a/SquirrelDefender.html
+++ b/SquirrelDefender.html
@@ -40,6 +40,7 @@
 
     var total;
     var timer;
+    var isGrounded = true;
 
     function create() {
 
@@ -87,11 +88,12 @@
         player.body.gravity.y = 1000;
         player.body.collideWorldBounds = true;
 
-        //  Our two animations, walking left and right.
+        //  Animations: walking left, right, jumping, idling, and landing.
         player.animations.add('left', [0, 1, 3], 10, true);
         player.animations.add('right', [4, 6, 2], 10, true);
         player.animations.add('jump', [8], 1, true);
         player.animations.add('idle', [10, 11], 4, true);
+        player.animations.add('land', [7], 5, false);
 
         player.scale.setMagnitude(3);
 
@@ -153,38 +155,53 @@
         //  Checks to see if the player overlaps with any of the stars, if he does call the collectStar function
         game.physics.arcade.overlap(player, stars, collectStar, null, this);
 
+        function checkLanding() {
+            if (!player.body.touching.down) {
+                player.animations.play('jump');
+                isGrounded = false;
+            } else if (!isGrounded) {
+                //isGrounded = true;
+                player.animations.play('land');
+                player.animations.currentAnim.onComplete.add(function () {isGrounded = true;}, this);
+            }
+        }
+
         //  Reset the players velocity (movement)
         player.body.velocity.x = 0;
-
-        if (cursors.left.isDown)
-        {
+        if (cursors.left.isDown) {
             //  Move to the left
             player.body.velocity.x = -300;
-
+            if (cursors.up.isDown && player.body.touching.down) {
+                //  Allow the player to jump if they are touching the ground.
+                player.body.velocity.y = -800;
+                isGrounded = false;
+            }
+            //checkLanding();
             player.animations.play('left');
-        }
-        else if (cursors.right.isDown)
-        {
+        } else if (cursors.right.isDown) {
             //  Move to the right
-            //player.body.velocity.x = 150;
             player.body.velocity.x = 300;
-
-            player.animations.play('right');
-        }
-        else
-        {
-            //  Stand still
-            player.animations.play('idle');
-        }
-
-        //  Allow the player to jump if they are touching the ground.
-        if (cursors.up.isDown && player.body.touching.down)
-        {
+            if (cursors.up.isDown && player.body.touching.down) {
+                //  Allow the player to jump if they are touching the ground.
+                player.body.velocity.y = -800;
+                isGrounded = false;
+            }
+                player.animations.play('right');
+        } else if (cursors.up.isDown && player.body.touching.down) {
+            //  Allow the player to jump if they are touching the ground.
             player.body.velocity.y = -800;
+            isGrounded = false;
+        } else if (!player.body.touching.down || !isGrounded) {
+                checkLanding();
+        } else if (!isGrounded) {
+            //isGrounded = true;
+            player.animations.play('land');
+            player.animations.currentAnim.onComplete.add(function () {isGrounded = true;}, this);
+        } else {
+                //  Stand still
+                player.animations.play('idle');
         }
-        if (!player.body.touching.down) {
-            player.animations.play('jump');
-        }
+
 
         //Fire
         if (fireButton.isDown)
