--- a/SquirrelDefender.html
+++ b/SquirrelDefender.html
@@ -28,7 +28,6 @@
     var player;
     var platforms;
     var cursors;
-    var frames;
     var stars;
     var score = 0;
     var scoreText;
@@ -37,18 +36,6 @@
     var bullets;
     var bulletTime = 0;
     var fireButton;
-
-<<<<<<< HEAD
-    //var total = 0;
-    //var baddieTime = 0;
-
-=======
-    var total;
-    var timer;
-    var isGrounded = true;
-    var total = 0;
-    var baddieTime = 0;
->>>>>>> origin/master
 
     function create() {
 
@@ -231,37 +218,6 @@
         game.physics.arcade.overlap(cyclists, bullets, collisionHandler, null, this);
         
     }
-/*
-    function releaseWheels() {
-<<<<<<< HEAD
-        //cyclist = game.add.sprite(3500, game.world.height - 190, 'bicycle');
-        //game.physics.arcade.enable(cyclist);
-       // cyclist.body.collideWorldBounds = true;
-
-        //cyclist.animations.add('left', [0, 1], 10, true);
-        //cyclist.animations.play('left', 10, true);
-=======
-        cyclist = game.add.sprite(3500, game.world.height - 100, 'bicycle');
-        game.physics.arcade.enable(cyclist);
-        cyclist.body.collideWorldBounds = true;
->>>>>>> origin/master
-
-        //cyclist.setAll('outOfBoundsKill', true);
-        //cyclist.setAll('checkWorldBounds', true);
-
-<<<<<<< HEAD
-        //cyclist.scale.setMagnitude(5);
-
-        cyclist.outOfBoundsKill = true;
-=======
-        cyclist.scale.setMagnitude(3);
->>>>>>> origin/master
-
-        game.add.tween(cyclist).to({ x: -50}, 20000, Phaser.Easing.Linear.None, true);
-
-        total++;
-        baddieTime = game.time.now + Math.random()*4000;
-    }*/
 
     function collectStar (player, star) {
 
@@ -293,41 +249,20 @@
     }
 
     function createCyclists() {
-        /*
-        for (var y = 0; y < 1; y++){
-        for (var x = 0; x < 1; x++) {
-            var cyclist = cyclists.create(x * 48, y * 50, 'bicycle');
-            cyclist.anchor.setTo(0.5, 0.5);
-        }
-    }*/
-
-         //cyclists.x = player.x + 400;
-         //cyclists.y = player.y + 100;
-
         for (var i = 0; i <50; i++){
-            var cyclist = cyclists.create(game.world.randomX, player.y + 100, 'bicycle');
+            cyclists.create(game.world.randomX, player.y + 100, 'bicycle');
         }
 
-
-        //cyclists.x = player.x + 400;
-        //cyclists.y = player.y + 100;
-        var tween = game.add.tween(cyclists).to({x:cyclists.x-5},2000, Phaser.Easing.Default, true, 0, 100, true);
-
-       // tween.onLoop.add(descend,this);
+        game.add.tween(cyclists).to({x:cyclists.x-5},2000, Phaser.Easing.Default, true, 0, 100, true);
 
         cyclists.callAll('animations.add','animations','left', [0, 1], 10, true);
         cyclists.callAll('animations.play', 'animations', 'left');
 
     }
 
-    function descend(){
-        cyclists.y += 10;
-    }
-
     function collisionHandler(bullet,cyclist){
         bullet.kill();
         cyclist.kill();
-        //cyclist.killOnComplete = true;
 
         score += 20;
         scoreText.text = 'Score: ' + score;
