--- a/SquirrelDefender.html
+++ b/SquirrelDefender.html
@@ -110,6 +110,7 @@
         player.animations.add('jump', [8], 1, true);
         player.animations.add('idle', [9, 10, 9, 11], 4, true);
         player.animations.add('land', [7], 5, false);
+        player.animations.add('dying', [28, 29, 30, 31, 32, 33, 34, 35, 36], 10, false);
 
         player.scale.setMagnitude(3);
 
